src/test/deca/context/valid/test_class/unit_selection_int.deca
// Description:
//    Unit Test selection 
// Results:
//    none
//
// History:
//    Created on 16/01/2025

class A {
    int x = 3;


}

{
    A a = new A();
    println(a.x);
}


