src/test/deca/context/invalid/test_class/selection_class_not_initialise.deca
// Description:
//    Unit Test selection 
// Results:
//    none
//
// History:
//    Created on 16/01/2025


class A {
    int x = 10;
}

{
    A a; // Variable non initialisée
    println(a.x); // Erreur : a n'a pas été initialisé
}
